modified min width of view logs button to address layout issue in safari

--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -26,6 +26,9 @@
     border: none;
     border-radius: 5px;
     padding: 2%;
+    min-width: 180px;
+    min-height: 76px;
+    max-width: 180px;
 }
 
 .view-logs-btn:hover {
@@ -90,6 +93,8 @@
 
     .view-logs-btn {
         padding: 3.5%;
+        min-height: 62px;
+        min-width: 142px;
     }
 
     .view-logs-btn a {
@@ -123,6 +128,8 @@
 
     .view-logs-btn {
         padding: 3%;
+        min-height: 62px;
+        min-width: 154px;
     }
 
     .view-logs-btn a {
@@ -136,4 +143,20 @@
     .add-log-gif {
         width: 100%;
     }
+
+    .view-logs-btn {
+        padding: 2%;
+        min-height: 64px;
+        min-width: 160px;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .view-logs-btn {
+        padding: 1.5%;
+        min-height: 66px;
+        min-width: 164px;
+    }
+
 }
